#68 Fix issue with scroll bar in submenu + design a custom scrollbar

--- a/varicity/public/styles/sidebar.css
+++ b/varicity/public/styles/sidebar.css
@@ -70,3 +70,22 @@
 
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: #e9ecef;
+}
+::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
+}
